Take config out of repo
That API token was not supposed to be there :/ . It's been revoked.

--- a/config.example.yml
+++ b/config.example.yml
@@ -1,3 +1,3 @@
 memex_image_path: '~/Dropbox/memex.sparsebundle'
 memex_volume_name: 'Memex'
-todoist_api_token: 'bf677783696428c88493cdd1ff1ea010092b8e02'
+todoist_api_token: null
