--- a/.projections.json
+++ b/.projections.json
@@ -7,7 +7,7 @@
     "type": "test",
     "alternate": "lib/{}.rb",
     "template": [
-      "context {camelcase|capitalize|colons} do",
+      "RootContext.context {camelcase|capitalize|colons} do",
       "end"
     ]
   },
